User Name Mobile Spacing Styling Fixes

--- a/core/app/shell/src/themes/suite8/css/layout/_navbar.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_navbar.scss
@@ -239,6 +239,10 @@ h4.recently-viewed-header {
   .global-links .nav-link {
     font-size: 0.85em;
     font-weight: bold;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
   }
 
   .navbar-nav > li > .dropdown-menu,
